added hsv as feature

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -35,7 +35,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "193a95bb7c0b4bb8994567a5559f484d",
+       "model_id": "9ba48359c28b4f529b9edf8dee1d3b96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,7 +127,12 @@
     "    \"\"\"\n",
     "    avg_color = tuple(sum(col) // len(pixels) for col in zip(*pixels))\n",
     "    avg_brightness = sum(sum(pixel) for pixel in pixels) // (3 * len(pixels))\n",
-    "    return avg_color, avg_brightness\n",
+    "\n",
+    "    # Convert pixels to HSV and calculate average HSV\n",
+    "    hsv_pixels = cv2.cvtColor(np.array(pixels).reshape(-1, 1, 3).astype(np.uint8), cv2.COLOR_RGB2HSV).reshape(-1, 3)\n",
+    "    avg_hsv = tuple(np.mean(hsv_pixels, axis=0))\n",
+    "\n",
+    "    return avg_color, avg_brightness, avg_hsv\n",
     "\n",
     "def extract_image_details(image_path):\n",
     "    \"\"\"\n",
@@ -151,7 +156,7 @@
     "\n",
     "            # Color values and brightness\n",
     "            pixels = list(img.getdata())\n",
-    "            avg_color, avg_brightness = calculate_avg_color_brightness(pixels)\n",
+    "            avg_color, avg_brightness, avg_hsv = calculate_avg_color_brightness(pixels)\n",
     "\n",
     "\n",
     "            # Resolution and DPI\n",
@@ -178,6 +183,7 @@
     "            'File_Path': image_path,\n",
     "            'Average_Color': avg_color,\n",
     "            'Brightness': avg_brightness,\n",
+    "            'Average_HSV': avg_hsv,\n",
     "            'Resolution': resolution,\n",
     "            'DPI': dpi,\n",
     "            'File_Size': file_size,\n",
@@ -284,7 +290,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eae666b149464025a44f2aa0672e6474",
+       "model_id": "ad76a97555824875a83864ff60f720bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,14 +302,19 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/plain": [
-       "'\\nThis outputs the metadata batchwise and overwrites it.\\nYou need extract the details from ___transformed_batch_df___ into SQLite.\\nIn summary, extracted details by now are:\\n\\nID\\nFile_Path\\nAverage_Color\\nBrightness\\nResolution\\nDPI\\nFile_Size\\nFile_Type\\nMetadata\\nResized_Image_Vector\\nPCA_Vectors\\nPairwise_Distances\\n\\nNOTE \"Metadata\" might be empty\\n'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m n_components \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m \u001b[38;5;66;03m# the amount of features our iPCA will keep for every image\u001b[39;00m\n\u001b[0;32m      8\u001b[0m generator \u001b[38;5;241m=\u001b[39m image_batch_generator(image_paths, batch_size, show_progress\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)   \u001b[38;5;66;03m# gives back batch_df + image as 1d\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m ipca \u001b[38;5;241m=\u001b[39m \u001b[43mprocess_large_image_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgenerator\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtotal_images\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_components\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# needed to fit the iPCA \u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# After fitting IPCA, transform all data\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m batch_df, image_vectors \u001b[38;5;129;01min\u001b[39;00m image_batch_generator(image_paths, batch_size, show_progress\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "Cell \u001b[1;32mIn[4], line 17\u001b[0m, in \u001b[0;36mprocess_large_image_dataset\u001b[1;34m(generator, total_images, batch_size, n_components)\u001b[0m\n\u001b[0;32m     14\u001b[0m ipca \u001b[38;5;241m=\u001b[39m IncrementalPCA(n_components\u001b[38;5;241m=\u001b[39mn_components)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, total_images, batch_size):\n\u001b[1;32m---> 17\u001b[0m     batch_df, image_vectors \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mgenerator\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m     ipca\u001b[38;5;241m.\u001b[39mpartial_fit(image_vectors)\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m ipca\n",
+      "Cell \u001b[1;32mIn[5], line 7\u001b[0m, in \u001b[0;36mimage_batch_generator\u001b[1;34m(image_files, batch_size, show_progress)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;28mlen\u001b[39m(image_files), batch_size):\n\u001b[0;32m      6\u001b[0m     batch \u001b[38;5;241m=\u001b[39m image_files[index:index \u001b[38;5;241m+\u001b[39m batch_size]\n\u001b[1;32m----> 7\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [\u001b[43mextract_image_details\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m image \u001b[38;5;129;01min\u001b[39;00m batch]\n\u001b[0;32m      8\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [features \u001b[38;5;28;01mfor\u001b[39;00m features \u001b[38;5;129;01min\u001b[39;00m details_list \u001b[38;5;28;01mif\u001b[39;00m features \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[0;32m      9\u001b[0m     image_vectors \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([features[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mResized_Image_Vector\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m features \u001b[38;5;129;01min\u001b[39;00m details_list])\n",
+      "Cell \u001b[1;32mIn[3], line 62\u001b[0m, in \u001b[0;36mextract_image_details\u001b[1;34m(image_path)\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[38;5;66;03m# Color values and brightness\u001b[39;00m\n\u001b[0;32m     61\u001b[0m pixels \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(img\u001b[38;5;241m.\u001b[39mgetdata())\n\u001b[1;32m---> 62\u001b[0m avg_color, avg_brightness, avg_hsv \u001b[38;5;241m=\u001b[39m \u001b[43mcalculate_avg_color_brightness\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpixels\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     65\u001b[0m \u001b[38;5;66;03m# Resolution and DPI\u001b[39;00m\n\u001b[0;32m     66\u001b[0m resolution \u001b[38;5;241m=\u001b[39m img\u001b[38;5;241m.\u001b[39msize  \u001b[38;5;66;03m# (width, height)\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[3], line 35\u001b[0m, in \u001b[0;36mcalculate_avg_color_brightness\u001b[1;34m(pixels)\u001b[0m\n\u001b[0;32m     32\u001b[0m avg_brightness \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(\u001b[38;5;28msum\u001b[39m(pixel) \u001b[38;5;28;01mfor\u001b[39;00m pixel \u001b[38;5;129;01min\u001b[39;00m pixels) \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m (\u001b[38;5;241m3\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mlen\u001b[39m(pixels))\n\u001b[0;32m     34\u001b[0m \u001b[38;5;66;03m# Convert pixels to HSV and calculate average HSV\u001b[39;00m\n\u001b[1;32m---> 35\u001b[0m hsv_pixels \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mcvtColor(\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpixels\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mastype(np\u001b[38;5;241m.\u001b[39muint8), cv2\u001b[38;5;241m.\u001b[39mCOLOR_RGB2HSV)\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m3\u001b[39m)\n\u001b[0;32m     36\u001b[0m avg_hsv \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(np\u001b[38;5;241m.\u001b[39mmean(hsv_pixels, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m))\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m avg_color, avg_brightness, avg_hsv\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
