Added creation of pickle-file for paths

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
       "\n",
       "\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 1 ms\n"
+      "Wall time: 3.09 ms\n"
      ]
     }
    ],
@@ -101,7 +101,8 @@
     "\n",
     "\n",
     "image_paths = find_image_files(r\"C:\\Users\\timsa\\Desktop\\sample_pictures\")\n",
-    "\n",
+    "df_image_paths = pd.DataFrame(image_paths, columns=[\"Path\"])\n",
+    "df_image_paths.to_pickle('Path.pkl')\n",
     "\n",
     "# Show first 10 paths\n",
     "print(f\"Number found images: {len(image_paths)}\")\n",
@@ -137,13 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save data to database\n",
+    "path_pickle_df = pd.read_pickle(\"Path.pkl\")\n",
     "\n",
-    "for file_path in image_paths:\n",
+    "for file_path in path_pickle_df['Path']:\n",
     "    curs.execute('''INSERT OR IGNORE INTO image_paths (path) VALUES (?);''', (file_path,))\n",
     "    # print(f\"Inserted path: {file_path}\")\n",
     "    \n",
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -269,27 +271,27 @@
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>18</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\0031.png</td>\n",
+       "      <td>Path</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>19</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\adam-bi...</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\0031.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>20</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\adrian-...</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\adam-bi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>21</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\test_2.bmp</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\adrian-...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>22</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\test_2.bmp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
@@ -351,6 +353,11 @@
        "      <td>34</td>\n",
        "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>35</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -374,11 +381,11 @@
        "14  15  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
        "15  16  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
        "16  17  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "17  18    C:\\Users\\timsa\\Desktop\\sample_pictures\\0031.png\n",
-       "18  19  C:\\Users\\timsa\\Desktop\\sample_pictures\\adam-bi...\n",
-       "19  20  C:\\Users\\timsa\\Desktop\\sample_pictures\\adrian-...\n",
-       "20  21  C:\\Users\\timsa\\Desktop\\sample_pictures\\test_2.bmp\n",
-       "21  22  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "17  18                                               Path\n",
+       "18  19    C:\\Users\\timsa\\Desktop\\sample_pictures\\0031.png\n",
+       "19  20  C:\\Users\\timsa\\Desktop\\sample_pictures\\adam-bi...\n",
+       "20  21  C:\\Users\\timsa\\Desktop\\sample_pictures\\adrian-...\n",
+       "21  22  C:\\Users\\timsa\\Desktop\\sample_pictures\\test_2.bmp\n",
        "22  23  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
        "23  24  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
        "24  25  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
@@ -390,10 +397,11 @@
        "30  31  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
        "31  32  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
        "32  33  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "33  34  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_..."
+       "33  34  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "34  35  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_..."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
