--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
       "\n",
       "\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 3.09 ms\n"
+      "Wall time: 2.04 ms\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -268,96 +268,6 @@
        "      <td>17</td>\n",
        "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>18</td>\n",
-       "      <td>Path</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>19</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\0031.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>20</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\adam-bi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>21</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\adrian-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>22</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\test_2.bmp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>23</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>24</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>25</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>26</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>27</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>28</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>29</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>30</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>31</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>32</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>33</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>34</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>35</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -380,28 +290,10 @@
        "13  14  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
        "14  15  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
        "15  16  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "16  17  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "17  18                                               Path\n",
-       "18  19    C:\\Users\\timsa\\Desktop\\sample_pictures\\0031.png\n",
-       "19  20  C:\\Users\\timsa\\Desktop\\sample_pictures\\adam-bi...\n",
-       "20  21  C:\\Users\\timsa\\Desktop\\sample_pictures\\adrian-...\n",
-       "21  22  C:\\Users\\timsa\\Desktop\\sample_pictures\\test_2.bmp\n",
-       "22  23  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "23  24  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "24  25  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "25  26  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "26  27  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "27  28  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "28  29  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "29  30  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "30  31  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "31  32  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "32  33  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "33  34  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "34  35  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_..."
+       "16  17  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_..."
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,6 +309,74 @@
     "#conn.close()\n",
     "\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Measurement functions (1st & 2nd)\n",
+    "\n",
+    "def image_rgb_calculation(image):\n",
+    "    # OpenCV uses BGR color space, we have to convert it to the RGB color space\n",
+    "    rgb_image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    # Calculate the histogram\n",
+    "    hist = cv2.calcHist([rgb_image], [0, 1, 2], None, [8, 8, 8], [0, 256, 0, 256, 0, 256])\n",
+    "    \n",
+    "    # Normalize the histogram so that histograms of different images (different sizes, resolutions) are comparable\n",
+    "    hist = cv2.normalize(hist, hist)\n",
+    "    hist = hist.flatten()\n",
+    "    return hist\n",
+    "\n",
+    "def image_hsv_calculation(image):\n",
+    "    # OpenCV uses BGR color space, we have to convert it to the RGB color space\n",
+    "    hsv_image = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
+    "    \n",
+    "    # Calculate the histogram (bin-sizes = 8, values from 0-255)\n",
+    "    hist = cv2.calcHist([hsv_image], [0, 1, 2], None, [8, 8, 8], [0, 256, 0, 256, 0, 256])\n",
+    "    \n",
+    "    # Normalize the histogram so that histograms of different images (different sizes, resolutions) are comparable\n",
+    "    hist = cv2.normalize(hist, hist)\n",
+    "    hist = hist.flatten()\n",
+    "    return hist\n",
+    "\n",
+    "# To be implemented:\n",
+    "def model_embeddings_calculation(model, image):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Similarity functions\n",
+    "\n",
+    "def euclidean_distance():\n",
+    "    pass\n",
+    "\n",
+    "def manhattan_distance():\n",
+    "    pass\n",
+    "\n",
+    "def cosine_similarity():\n",
+    "    pass\n",
+    "\n",
+    "def jaccard_similarity():\n",
+    "    pass\n",
+    "\n",
+    "def hamming_distance():\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ___________________________________________________"
    ]
   },
   {
