Changed order óf notebook cells

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
       "C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_1\\folder_1_2\\0004.png\n",
       "C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_1\\folder_1_2\\0005.png\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 2.48 ms\n"
+      "Wall time: 1.01 ms\n"
      ]
     }
    ],
@@ -81,8 +81,8 @@
     "\n",
     "image_paths = find_image_files(r\"C:\\Users\\timsa\\Desktop\\sample_pictures\")\n",
     "#df_image_paths = pd.DataFrame({'ID': range(1, len(image_paths) + 1), 'Path': image_paths})\n",
-    "df_image_paths = pd.DataFrame(image_paths, columns=[\"Path\"])\n",
-    "df_image_paths.to_pickle('Path.pkl')\n",
+    "#df_image_paths = pd.DataFrame(image_paths, columns=[\"Path\"])\n",
+    "#df_image_paths.to_pickle('Path.pkl')\n",
     "\n",
     "# Show first 10 paths\n",
     "print(f\"Number found images: {len(image_paths)}\")\n",
@@ -96,205 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create database\n",
-    "\n",
-    "# Check if the folder 'databases' does not exist / create it\n",
-    "if not os.path.exists('database'):\n",
-    "    os.makedirs('database')\n",
-    "    \n",
-    "conn = sqlite3.connect(\"database/bd_database.db\")\n",
-    "curs = conn.cursor()\n",
-    "\n",
-    "curs.execute(\"\"\"CREATE TABLE IF NOT EXISTS image_paths \n",
-    "                (ID INTEGER PRIMARY KEY,\n",
-    "                Path text);\"\"\")\n",
-    "conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save data to database\n",
-    "path_pickle_df = pd.read_pickle(\"Path.pkl\")\n",
-    "\n",
-    "for file_path in path_pickle_df['Path']:\n",
-    "    curs.execute('''INSERT OR IGNORE INTO image_paths (Path) VALUES (?);''', (file_path,))\n",
-    "    # print(f\"Inserted path: {file_path}\")\n",
-    "    \n",
-    "conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Path</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\0031.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\adam-bi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\adrian-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\test_2.bmp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>12</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>13</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>14</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>15</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>16</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>17</td>\n",
-       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    ID                                               Path\n",
-       "0    1    C:\\Users\\timsa\\Desktop\\sample_pictures\\0031.png\n",
-       "1    2  C:\\Users\\timsa\\Desktop\\sample_pictures\\adam-bi...\n",
-       "2    3  C:\\Users\\timsa\\Desktop\\sample_pictures\\adrian-...\n",
-       "3    4  C:\\Users\\timsa\\Desktop\\sample_pictures\\test_2.bmp\n",
-       "4    5  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "5    6  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "6    7  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "7    8  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "8    9  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "9   10  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "10  11  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "11  12  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "12  13  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "13  14  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "14  15  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "15  16  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
-       "16  17  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_..."
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "curs.execute(\"\"\"SELECT *\n",
-    "                FROM image_paths;\"\"\")\n",
-    "results = curs.fetchall()\n",
-    "\n",
-    "df = pd.DataFrame(results, columns=['ID', 'Path'])\n",
-    "\n",
-    "#conn.close()\n",
-    "\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,30 +129,6 @@
     "# To be implemented:\n",
     "def model_embeddings_calculation(model, image):\n",
     "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Similarity functions\n",
-    "\n",
-    "def euclidean_distance():\n",
-    "    pass\n",
-    "\n",
-    "def manhattan_distance():\n",
-    "    pass\n",
-    "\n",
-    "def cosine_similarity():\n",
-    "    pass\n",
-    "\n",
-    "def jaccard_similarity():\n",
-    "    pass\n",
-    "\n",
-    "def hamming_distance():\n",
-    "    pass\n"
    ]
   },
   {
@@ -680,13 +458,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c3a5f87e8af47bbbe959e72b3f2e012",
+       "model_id": "6019ee20c27f48e68e1d77736c769c05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -831,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +618,7 @@
        "16"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -913,6 +691,221 @@
     "print(df_hsv.tail())\n",
     "print(df_paths.tail())\n",
     "print(df_other_data.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create database\n",
+    "\n",
+    "# Check if the folder 'databases' does not exist / create it\n",
+    "if not os.path.exists('database'):\n",
+    "    os.makedirs('database')\n",
+    "    \n",
+    "conn = sqlite3.connect(\"database/bd_database.db\")\n",
+    "curs = conn.cursor()\n",
+    "\n",
+    "curs.execute(\"\"\"CREATE TABLE IF NOT EXISTS image_paths \n",
+    "                (ID INTEGER PRIMARY KEY,\n",
+    "                Path text);\"\"\")\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save data to database\n",
+    "path_pickle_df = pd.read_pickle(\"Path.pkl\")\n",
+    "\n",
+    "for file_path in path_pickle_df['Path']:\n",
+    "    curs.execute('''INSERT OR IGNORE INTO image_paths (Path) VALUES (?);''', (file_path,))\n",
+    "    # print(f\"Inserted path: {file_path}\")\n",
+    "    \n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\0031.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\adam-bi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\adrian-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ID                                               Path\n",
+       "0    1    C:\\Users\\timsa\\Desktop\\sample_pictures\\0031.png\n",
+       "1    2  C:\\Users\\timsa\\Desktop\\sample_pictures\\adam-bi...\n",
+       "2    3  C:\\Users\\timsa\\Desktop\\sample_pictures\\adrian-...\n",
+       "3    4  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "4    5  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "5    6  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "6    7  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "7    8  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "8    9  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "9   10  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "10  11  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "11  12  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "12  13  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "13  14  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "14  15  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_...\n",
+       "15  16  C:\\Users\\timsa\\Desktop\\sample_pictures\\folder_..."
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "curs.execute(\"\"\"SELECT *\n",
+    "                FROM image_paths;\"\"\")\n",
+    "results = curs.fetchall()\n",
+    "\n",
+    "df = pd.DataFrame(results, columns=['ID', 'Path'])\n",
+    "\n",
+    "#conn.close()\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Similarity functions\n",
+    "\n",
+    "def euclidean_distance():\n",
+    "    pass\n",
+    "\n",
+    "def manhattan_distance():\n",
+    "    pass\n",
+    "\n",
+    "def cosine_similarity():\n",
+    "    pass\n",
+    "\n",
+    "def jaccard_similarity():\n",
+    "    pass\n",
+    "\n",
+    "def hamming_distance():\n",
+    "    pass\n"
    ]
   },
   {
