Track batch_index logic

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -560,16 +560,16 @@
     "        return None\n",
     "\n",
     "\n",
-    "def image_batch_generator(image_files, batch_size, resize_size, show_progress=True):\n",
+    "def image_batch_generator(image_files, batch_size, resize_size, start_index = 0, show_progress=True):\n",
     "    total_batches = (len(image_files) + batch_size - 1) // batch_size\n",
     "    progress_bar = tqdm(total=total_batches, desc=\"Processing images\") if show_progress else None\n",
     "\n",
-    "    for index in range(0, len(image_files), batch_size):\n",
+    "    for index in range(start_index, len(image_files), batch_size):\n",
     "        batch = image_files[index:index + batch_size]\n",
     "        details_list = [extract_image_details(index + i + 1, path, resize_size) for i, path in enumerate(batch)]\n",
     "        details_list = [features for features in details_list if features is not None]\n",
     "        df = pd.DataFrame(details_list)\n",
-    "        yield df\n",
+    "        yield df, index + batch_size\n",
     "        if show_progress:\n",
     "            progress_bar.update(1)\n",
     "\n",
@@ -584,13 +584,15 @@
     "\n",
     "\n",
     "rgb_hists, hsv_hists, paths, other_data = [], [], [], []\n",
-    "for df in image_batch_generator(image_paths, batch_size, desired_size, show_progress=True):\n",
+    "for df, batch_index in image_batch_generator(image_paths, batch_size, desired_size, show_progress=True):\n",
     "    paths.extend(df[['ID', 'Path']].values.tolist())\n",
     "    rgb_hists.extend(df[['ID', 'RGB_Histogram']].values.tolist())\n",
     "    hsv_hists.extend(df[['ID', 'HSV_Histogram']].values.tolist())\n",
     "    other_data.extend(df.drop(columns=['Path', 'RGB_Histogram', 'HSV_Histogram']).values.tolist())\n",
     "    \n",
-    "\n",
+    "    # Here the checkpoint needs to be saved each batch -> I need the batch_number\n",
+    "    \n",
+    "    \n",
     "df_rgb = pd.DataFrame(rgb_hists, columns=[\"ID\", \"Histogram\"])\n",
     "df_hsv = pd.DataFrame(hsv_hists, columns=[\"ID\", \"Histogram\"])\n",
     "df_paths = pd.DataFrame(paths, columns=[\"ID\", \"Path\"])\n",
@@ -606,6 +608,27 @@
     "df_paths.to_pickle('Path.pkl')\n",
     "df_other_data.to_pickle('Other_data.pkl')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
