--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -583,14 +583,16 @@
     "desired_size = (60, 60)\n",
     "\n",
     "\n",
-    "rgb_hists, hsv_hists, paths, other_data = [], [], [], []\n",
+    "paths, rgb_hists, hsv_hists, other_data = [], [], [], []\n",
     "for df, batch_index in image_batch_generator(image_paths, batch_size, desired_size, show_progress=True):\n",
     "    paths.extend(df[['ID', 'Path']].values.tolist())\n",
     "    rgb_hists.extend(df[['ID', 'RGB_Histogram']].values.tolist())\n",
     "    hsv_hists.extend(df[['ID', 'HSV_Histogram']].values.tolist())\n",
     "    other_data.extend(df.drop(columns=['Path', 'RGB_Histogram', 'HSV_Histogram']).values.tolist())\n",
     "    \n",
-    "    # Here the checkpoint needs to be saved each batch -> I need the batch_number\n",
+    "    # Save checkpoint\n",
+    "    with open(f'checkpoint_{batch_index}.pkl', 'wb') as f:\n",
+    "        pickle.dump((batch_index, paths, rgb_hists, hsv_hists, other_data), f)\n",
     "    \n",
     "    \n",
     "df_rgb = pd.DataFrame(rgb_hists, columns=[\"ID\", \"Histogram\"])\n",
