--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,20 +46,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number found images: 11680\n",
+      "Number found images: 2056\n",
       "Some paths:\n",
-      "C:\\Users\\timsa\\Documents\\DataTim\\Weihnachten 2023\\Bilder\\Screenshot_20230324_192205_WhatsApp.jpg\n",
-      "C:\\Users\\timsa\\Documents\\DataTim\\Weihnachten 2023\\Bilder\\Screenshot_20230608_223514_Snapchat.jpg\n",
-      "C:\\Users\\timsa\\Documents\\DataTim\\Weihnachten 2023\\Bilder\\Screenshot_20230709_152656_BeReal.jpg\n",
-      "C:\\Users\\timsa\\Documents\\DataTim\\Weihnachten 2023\\Bilder\\Screenshot_20230715_030306_BeReal.jpg\n",
-      "C:\\Users\\timsa\\Documents\\DataTim\\Weihnachten 2023\\Bilder\\Screenshot_20230720_212438_Snapchat.jpg\n",
-      "C:\\Users\\timsa\\Documents\\DataTim\\Weihnachten 2023\\Bilder\\Screenshot_20230720_212749_Gallery.jpg\n",
-      "C:\\Users\\timsa\\Documents\\DataTim\\Weihnachten 2023\\Bilder\\Screenshot_20230720_212756_Gallery.jpg\n",
-      "C:\\Users\\timsa\\Documents\\DataTim\\Weihnachten 2023\\Bilder\\Screenshot_20230720_212830_Gallery.jpg\n",
-      "C:\\Users\\timsa\\Documents\\DataTim\\Weihnachten 2023\\Bilder\\Screenshot_20230722_224505_Instagram.jpg\n",
-      "C:\\Users\\timsa\\Documents\\DataTim\\Weihnachten 2023\\Bilder\\Screenshot_20230724_112125_BeReal.jpg\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0001.png\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0002.png\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0003.png\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0004.png\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0005.png\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0006.png\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0007.png\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0008.png\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0009.png\n",
+      "C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\DIV2k\\DIV2K_train_HR\\DIV2K_train_HR\\0010.png\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 772 ms\n"
+      "Wall time: 70.1 ms\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,18 +448,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee3eecaed60c4696aef218f8aa4b85eb",
+       "model_id": "d20f5d435235448daaa6be0fb39d4382",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Processing images:   0%|          | 0/109 [00:00<?, ?it/s]"
+       "Processing images:   0%|          | 0/21 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -472,10 +472,10 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 119\u001b[0m\n\u001b[0;32m    115\u001b[0m \u001b[38;5;66;03m# Load checkpoint\u001b[39;00m\n\u001b[0;32m    116\u001b[0m start_index, paths, rgb_hists, hsv_hists, other_data \u001b[38;5;241m=\u001b[39m load_checkpoint()\n\u001b[1;32m--> 119\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m df, batch_index \u001b[38;5;129;01min\u001b[39;00m image_batch_generator(image_paths, batch_size, desired_size, start_index\u001b[38;5;241m=\u001b[39mstart_index, show_progress\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[0;32m    120\u001b[0m     paths\u001b[38;5;241m.\u001b[39mextend(df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPath\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mtolist())\n\u001b[0;32m    121\u001b[0m     rgb_hists\u001b[38;5;241m.\u001b[39mextend(df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRGB_Histogram\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mtolist())\n",
-      "Cell \u001b[1;32mIn[25], line 98\u001b[0m, in \u001b[0;36mimage_batch_generator\u001b[1;34m(image_files, batch_size, resize_size, start_index, show_progress)\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(start_index, \u001b[38;5;28mlen\u001b[39m(image_files), batch_size):\n\u001b[0;32m     97\u001b[0m     batch \u001b[38;5;241m=\u001b[39m image_files[index:index \u001b[38;5;241m+\u001b[39m batch_size]\n\u001b[1;32m---> 98\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [extract_image_details(index \u001b[38;5;241m+\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, path, resize_size) \u001b[38;5;28;01mfor\u001b[39;00m i, path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(batch)]\n\u001b[0;32m     99\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [features \u001b[38;5;28;01mfor\u001b[39;00m features \u001b[38;5;129;01min\u001b[39;00m details_list \u001b[38;5;28;01mif\u001b[39;00m features \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[0;32m    100\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(details_list)\n",
-      "Cell \u001b[1;32mIn[25], line 98\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(start_index, \u001b[38;5;28mlen\u001b[39m(image_files), batch_size):\n\u001b[0;32m     97\u001b[0m     batch \u001b[38;5;241m=\u001b[39m image_files[index:index \u001b[38;5;241m+\u001b[39m batch_size]\n\u001b[1;32m---> 98\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [extract_image_details(index \u001b[38;5;241m+\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, path, resize_size) \u001b[38;5;28;01mfor\u001b[39;00m i, path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(batch)]\n\u001b[0;32m     99\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [features \u001b[38;5;28;01mfor\u001b[39;00m features \u001b[38;5;129;01min\u001b[39;00m details_list \u001b[38;5;28;01mif\u001b[39;00m features \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[0;32m    100\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(details_list)\n",
-      "Cell \u001b[1;32mIn[25], line 6\u001b[0m, in \u001b[0;36mextract_image_details\u001b[1;34m(image_id, path, resize_size)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mextract_image_details\u001b[39m(image_id, path, resize_size):\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m----> 6\u001b[0m         image \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(path)\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m image \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m      8\u001b[0m             image \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mresize(image, resize_size)\n",
+      "Cell \u001b[1;32mIn[9], line 119\u001b[0m\n\u001b[0;32m    115\u001b[0m \u001b[38;5;66;03m# Load checkpoint\u001b[39;00m\n\u001b[0;32m    116\u001b[0m start_index, paths, rgb_hists, hsv_hists, other_data \u001b[38;5;241m=\u001b[39m load_checkpoint()\n\u001b[1;32m--> 119\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m df, batch_index \u001b[38;5;129;01min\u001b[39;00m image_batch_generator(image_paths, batch_size, desired_size, start_index\u001b[38;5;241m=\u001b[39mstart_index, show_progress\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[0;32m    120\u001b[0m     paths\u001b[38;5;241m.\u001b[39mextend(df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPath\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mtolist())\n\u001b[0;32m    121\u001b[0m     rgb_hists\u001b[38;5;241m.\u001b[39mextend(df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRGB_Histogram\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mtolist())\n",
+      "Cell \u001b[1;32mIn[9], line 98\u001b[0m, in \u001b[0;36mimage_batch_generator\u001b[1;34m(image_files, batch_size, resize_size, start_index, show_progress)\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(start_index, \u001b[38;5;28mlen\u001b[39m(image_files), batch_size):\n\u001b[0;32m     97\u001b[0m     batch \u001b[38;5;241m=\u001b[39m image_files[index:index \u001b[38;5;241m+\u001b[39m batch_size]\n\u001b[1;32m---> 98\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [extract_image_details(index \u001b[38;5;241m+\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, path, resize_size) \u001b[38;5;28;01mfor\u001b[39;00m i, path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(batch)]\n\u001b[0;32m     99\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [features \u001b[38;5;28;01mfor\u001b[39;00m features \u001b[38;5;129;01min\u001b[39;00m details_list \u001b[38;5;28;01mif\u001b[39;00m features \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[0;32m    100\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(details_list)\n",
+      "Cell \u001b[1;32mIn[9], line 98\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(start_index, \u001b[38;5;28mlen\u001b[39m(image_files), batch_size):\n\u001b[0;32m     97\u001b[0m     batch \u001b[38;5;241m=\u001b[39m image_files[index:index \u001b[38;5;241m+\u001b[39m batch_size]\n\u001b[1;32m---> 98\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [extract_image_details(index \u001b[38;5;241m+\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, path, resize_size) \u001b[38;5;28;01mfor\u001b[39;00m i, path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(batch)]\n\u001b[0;32m     99\u001b[0m     details_list \u001b[38;5;241m=\u001b[39m [features \u001b[38;5;28;01mfor\u001b[39;00m features \u001b[38;5;129;01min\u001b[39;00m details_list \u001b[38;5;28;01mif\u001b[39;00m features \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[0;32m    100\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(details_list)\n",
+      "Cell \u001b[1;32mIn[9], line 6\u001b[0m, in \u001b[0;36mextract_image_details\u001b[1;34m(image_id, path, resize_size)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mextract_image_details\u001b[39m(image_id, path, resize_size):\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m----> 6\u001b[0m         image \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(path)\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m image \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m      8\u001b[0m             image \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mresize(image, resize_size)\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -609,6 +609,11 @@
     "    with open(f'checkpoint_{batch_index}.pkl', 'wb') as f:\n",
     "        pickle.dump((batch_index, paths, rgb_hists, hsv_hists, other_data), f)\n",
     "    \n",
+    "    # Delete previous checkpoint if exists (saves storage, can be deactivated)\n",
+    "    previous_checkpoint = f'checkpoint_{batch_index - batch_size}.pkl'\n",
+    "    if os.path.exists(previous_checkpoint):\n",
+    "        os.remove(previous_checkpoint)\n",
+    "    \n",
     "\n",
     "# Save results\n",
     "df_rgb = pd.DataFrame(rgb_hists, columns=[\"ID\", \"Histogram\"])\n",
@@ -629,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -646,10 +651,10 @@
     {
      "data": {
       "text/plain": [
-       "800"
+       "100"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
